[tool.poetry]
name = "hypera"
version = "0.1.0"
description = ""
authors = ["VictoriaDias <reisvictoria.vdr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipykernel = "^6.13.0"
pandas = "^1.4.2"
seaborn = "^0.11.2"
plotly = "^5.7.0"
nbformat = "^5.3.0"
pycaret = "^2.3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
